; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_pt.c_reopen_tinst_level.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_pt.c_reopen_tinst_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tinst_depth = common dso_local global i64 0, align 8
@current_tinst_level = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @reopen_tinst_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reopen_tinst_level(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 0, i64* @tinst_depth, align 8
  %4 = load i64, i64* %2, align 8
  store i64 %4, i64* %3, align 8
  br label %5

5:                                                ; preds = %11, %1
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %5
  %9 = load i64, i64* @tinst_depth, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* @tinst_depth, align 8
  br label %11

11:                                               ; preds = %8
  %12 = load i64, i64* %3, align 8
  %13 = call i64 @TREE_CHAIN(i64 %12)
  store i64 %13, i64* %3, align 8
  br label %5

14:                                               ; preds = %5
  %15 = load i64, i64* %2, align 8
  store i64 %15, i64* @current_tinst_level, align 8
  %16 = call i32 (...) @pop_tinst_level()
  ret void
}

declare dso_local i64 @TREE_CHAIN(i64) #1

declare dso_local i32 @pop_tinst_level(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
